# AimGL

./: .clang-format  .gitignore  README.md
AimGL/src/: CMakeLists.txt  CMakeLists_Sources.txt  Game.cpp  Game.h  constants.cpp  constants.h  main.cpp  pch.h
AimGL/src/Player/: Player.cpp  Player.h
AimGL/src/Renderer/: Renderer.cpp  Renderer.h
AimGL/src/Renderer/Core/: OpenglUtils.cpp  OpenglUtils.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
AimGL/src/Renderer/Core/Buffers/: Buffer.cpp  BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
AimGL/src/Renderer/Graphics/: Texture.cpp  Texture.h
AimGL/src/Renderer/Graphics/2D/: Rectangle2D.cpp  Rectangle2D.h  Sprite2D.cpp  Sprite2D.h
AimGL/src/Renderer/Graphics/3D/: Model.cpp  Model.h  Sprite3D.cpp  Sprite3D.h
AimGL/src/Renderer3D/: BufferLayout.cpp  Font.h  IndexBuffer.cpp  IndexBuffer.h  OpenglUtils.cpp  Rectangle2D.cpp  Rectangle2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Sprite2D.cpp  Sprite2D.h  Sprite3D.cpp  Sprite3D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
AimGL/src/Resources/: ObjLoader.cpp  ObjLoader.h  Resources.h
AimGL/src/States/: State.cpp  State.h  StateStack.cpp  StateStack.h  States.h
AimGL/src/States/CustomStates/: ExitGameState.cpp  ExitGameState.h  GameState.cpp  GameState.h  LogoState.cpp  LogoState.h  PauseState.cpp  PauseState.h  SampleState.cpp  SampleState.h
AimGL/src/Utils/: Lerp.h  Mouse.cpp  Mouse.h  Normalize.h
AimGL/src/World/: Camera.cpp  Camera.h  InfiniteGridFloor.cpp  InfiniteGridFloor.h  Skybox.cpp  Skybox.h
AimGL/src/World/GameObjects/: Rifle.cpp  Rifle.h
AimGL/src/World/Physics/: Collider.cpp  Collider.h  ColliderRegister.cpp  ColliderRegister.h  ColliderTag.h  Collisions.cpp  Collisions.h  Ray.cpp  Ray.h  RayCollider.cpp  RayCollider.h  RectangleCollider.cpp  RectangleCollider.h  SphereCollider.cpp  SphereCollider.h
AimGL/src/World/Physics/Drawable/: AABB.cpp  AABB.h  DrawableCollider.cpp  DrawableCollider.h  Ray.cpp  Ray.h
AimGL/src/World/Scene/GameObjects/: ButtonStand.cpp  ButtonStand.h  LongCrate.cpp  LongCrate.h  PreviewTarget.cpp  PreviewTarget.h  Rifle.cpp  Rifle.h  ShootingRange.cpp  ShootingRange.h  Target.cpp  (+5 more)
(+38 files in other folders)
